; ModuleID = '/home/carl/AnghaBench/How-to-Make-a-Computer-Operating-System/src/sdk/src/libc/src/sys/extr_mount.c_mount.c'
source_filename = "/home/carl/AnghaBench/How-to-Make-a-Computer-Operating-System/src/sdk/src/libc/src/sys/extr_mount.c_mount.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SYS_mount = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mount(i8* %0, i8* %1, i8* %2, i64 %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  store i8* %0, i8** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i64 %3, i64* %10, align 8
  store i8* %4, i8** %11, align 8
  %13 = load i32, i32* @SYS_mount, align 4
  %14 = load i8*, i8** %7, align 8
  %15 = ptrtoint i8* %14 to i32
  %16 = load i8*, i8** %8, align 8
  %17 = ptrtoint i8* %16 to i32
  %18 = load i8*, i8** %9, align 8
  %19 = ptrtoint i8* %18 to i32
  %20 = load i64, i64* %10, align 8
  %21 = trunc i64 %20 to i32
  %22 = call i32 @syscall4(i32 %13, i32 %15, i32 %17, i32 %19, i32 %21)
  store i32 %22, i32* %12, align 4
  %23 = load i32, i32* %12, align 4
  %24 = icmp slt i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %5
  %26 = load i32, i32* %12, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* @errno, align 4
  store i32 -1, i32* %6, align 4
  br label %29

28:                                               ; preds = %5
  store i32 0, i32* %6, align 4
  br label %29

29:                                               ; preds = %28, %25
  %30 = load i32, i32* %6, align 4
  ret i32 %30
}

declare dso_local i32 @syscall4(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
